cmake_minimum_required(VERSION 3.11)

project(abcg)

include(cmake/Common.cmake)

add_subdirectory(abcg)
#add_subdirectory(examples)
#add_subdirectory(examples/firstapp)
#add_subdirectory(examples/sierpinski)
#add_subdirectory(examples/coloredtriangles)
#add_subdirectory(examples/regularpolygons)
#add_subdirectory(examples/asteroids)
add_subdirectory(examples/projeto_1)

#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
# add_subdirectory(sierpinski)
